# jobswyft

./: .env.example  .gitignore  CLAUDE.md  PRD Shah.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/: settings.json  settings.local.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  deps.py  exceptions.py  security.py
apps/api/app/db/: __init__.py  client.py  queries.py
apps/api/app/models/: __init__.py  ai.py  auth.py  autofill.py  base.py  feedback.py  job.py  privacy.py  resume.py  subscriptions.py  usage.py
apps/api/app/routers/: ai.py  auth.py  autofill.py  feedback.py  jobs.py  privacy.py  resumes.py  subscriptions.py  usage.py  webhooks.py
apps/api/app/services/: answer_service.py  auth_service.py  autofill_service.py  coach_service.py  cover_letter_service.py  extract_job_service.py  feedback_service.py  job_service.py  match_service.py  outreach_service.py  pdf_parser.py  pdf_service.py  privacy_service.py  resume_service.py  stripe_service.py  usage_service.py
apps/api/app/services/ai/: __init__.py  claude.py  factory.py  openai.py  prompts.py  provider.py
apps/api/tests/: __init__.py  conftest.py  test_ai_answer.py  test_ai_chat.py  test_ai_cover_letter.py  test_ai_extract.py  test_ai_match.py  test_ai_outreach.py  test_ai_pdf.py  test_auth.py  test_autofill.py  test_feedback.py  test_jobs.py  test_privacy.py  test_resumes.py  test_subscriptions.py  test_usage.py
design/: Insights  (+9 more)
(+358 files in other folders)
