[project]
name = "jobswyft-api"
version = "0.1.0"
description = "Jobswyft API - AI-powered job application assistant backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai>=1.50.0",
    "pdfplumber>=0.10.0",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "supabase>=2.27.2",
    "uvicorn>=0.40.0",
    "weasyprint>=62.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
